2003-03-11  David Hyatt  <hyatt@apple.com>

	Fix the 16000 pixel tall scrollbar on macromedia.com/software.
	vertical-align position hints were being set to bad values.
	
        Reviewed by mjs

        * khtml/rendering/render_object.cpp:
        (RenderObject::getVerticalPosition):

2003-03-10  David Hyatt  <hyatt@apple.com>

	Fix for <pre> regression, bug #3193590, directory listings
	busted.
	
        Reviewed by gramps

        * khtml/rendering/bidi.cpp:

2003-03-10  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fixed 3010915 -- mouse wheel won't scroll the main document when you are over [i]frame

        * kwq/WebCoreScrollView.h: Added.
        * kwq/WebCoreScrollView.m: Added. Overrides scrollWheel to "do the right thing".
        * WebCore.pbproj/project.pbxproj: Added WebCoreScrollView, and made it SPI so WebKit can use it.
        * WebCore.exp: Exported WebCoreScrollView so WebKit can use it.
        * WebCore-combined.exp: Regenerated.

        * kwq/KWQListBox.mm: Made KWQListBoxScrollView a subclass of WebCoreScrollView instead of NSScrollView.
        * kwq/KWQTextArea.h: Made KWQTextArea a subclass of WebCoreScrollView instead of NSScrollView.

        - other changes

        * kwq/KWQComboBox.mm: Make the workaround for the position of text in the pop-up
        compile only when we build on Jaguar. That way a Jaguar-built Safari looks perfect on
        Jaguar and a Panther built one looks perfect on Panther.

        * kwq/KWQKHTMLPart.mm: Reformatted some method calls.

2003-03-09  David Hyatt  <hyatt@apple.com>

	Fix compacts and run-ins to work a lot better than they did
	before.  I had some huge misunderstandings with how compact
	worked that have now been clarified.
	
        Reviewed by kocienda

        * khtml/rendering/bidi.cpp:
        * khtml/rendering/bidi.h:
        * khtml/rendering/render_block.cpp:
        * khtml/rendering/render_block.h:
        * khtml/rendering/render_flow.cpp: